# sesgx

./: README.md  pyproject.toml
scripts/: test.sh
src/sesgx/: __init__.py  sesgx.py
tests/: test_sesgx.py
